launch stage 2 - html rebilt step 2 ---------------------------------------refactor: update project references from atk.ai to atkm and improve styling

--- a/atkm/src/app/shared/components/navbar-tools/navbar-tools.component.html
+++ b/atkm/src/app/shared/components/navbar-tools/navbar-tools.component.html
@@ -44,14 +44,14 @@
     </button>
 
     <div class="user-menu">
-      <button class="user-avatar-btn" (click)="toggleUserMenu()">
-        <img src="https://avatars.githubusercontent.com/u/1?v=4" alt="@user" class="user-avatar" width="20"
-          height="20" />
-        <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
+      <button class="user-btn" (click)="toggleUserMenu()">
+        <img src="https://avatars.githubusercontent.com/u/32144309?v=4" alt="@user" class="user-avatar" width="16"
+          height="16" />
+        <!-- <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
           <path
             d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z">
           </path>
-        </svg>
+        </svg> -->
       </button>
     </div>
   </div>
