atk.core (02) - html (03) > side toggle (01) -------------------------------------------- feat: enhance configuration panel and sidebar navigation with collapsible features and action buttons

--- a/atkm/src/app/shared/components/sidebar-config/sidebar-config.component.html
+++ b/atkm/src/app/shared/components/sidebar-config/sidebar-config.component.html
@@ -1,41 +1,52 @@
-<aside class="config-panel" aria-label="Configuration">
-  @for (section of sections; track section.title) {
-  <div class="config-section">
-    <h3>
-      @if (section.icon) {
-      <span>↪</span>
-      }
-      {{section.title}}
-    </h3>
+<aside class="config-panel" [class.collapsed]="isCollapsed" [class.expanded]="!isCollapsed">
+  <button class="config-toggle" (click)="onToggle()"
+    [attr.aria-label]="isCollapsed ? 'Ouvrir configuration' : 'Fermer configuration'">
+    <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
+      <path
+        d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872L9.405 1.05zM8 10.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z" />
+    </svg>
+  </button>
+  <!-- @if (!isCollapsed) { -->
+  <div class="config-content">
+    @for (section of sections; track $index) {
+    <div class="config-section">
+      <h3>
+        @if (section.icon) {
+        <span>↪</span>
+        }
+        {{section.title}}
+      </h3>
 
-    @for (item of section.items; track item.title) {
-    <div class="config-item">
-      <svg class="config-item-icon" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16">
-        @switch (item.icon) {
-        @case ('display') {
-        <path
-          d="M8 0a8.2 8.2 0 0 1 .701.031C9.444.095 9.99.645 10.016 1.299l.497 1.138 1.017.215c.653.138 1.153.675 1.245 1.33l.089.649.906.664c.536.389.839 1.034.723 1.687l-.165.93.818.752c.399.365.415.998.04 1.382l-.577.597.213.838c.134.659-.295 1.279-.1007 1.338l-.496.059-.815.644c-.553.43-1.275.43-1.829 0l-.815-.644-.496-.059c-.754-.059-1.339-.679-1.007-1.338l.213-.838-.577-.597c-.375-.384-.359-1.017.04-1.382l.818-.752-.165-.93c-.116-.653.187-1.298.723-1.687l.906-.664.089-.649c.092-.655.592-1.192 1.245-1.33l1.017-.215.497-1.138C6.01.645 6.556.095 7.299.031A8.2 8.2 0 0 1 8 0ZM5.78 8.75a9.64 9.64 0 0 0 1.363 4.177c.255.426.542.832.857 1.215.245-.296.551-.705.857-1.215A9.64 9.64 0 0 0 10.22 8.75Zm4.44-1.5a9.64 9.64 0 0 0-1.363-4.177c-.307-.51-.612-.919-.857-1.215a9.927 9.927 0 0 0-.857 1.215A9.64 9.64 0 0 0 5.78 7.25Z">
-        </path>
-        }
-        @case ('action') {
-        <path
-          d="M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V1.75a.25.25 0 0 0-.25-.25Zm7.47 3.97a.75.75 0 0 1 1.06 0l2 2a.75.75 0 0 1 0 1.06l-2 2a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L10.69 8.5H4.25a.75.75 0 0 1 0-1.5h6.44L9.22 5.53a.749.749 0 0 1 .215-.734.749.749 0 0 1 .785-.057Z">
-        </path>
-        }
-        @default {
-        <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"></path>
-        }
-        }
-      </svg>
+      @for (item of section.items; track $index) {
+      <div class="config-item">
+        <svg class="config-item-icon" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16">
+          @switch (item.icon) {
+          @case ('display') {
+          <path
+            d="M8 0a8.2 8.2 0 0 1 .701.031C9.444.095 9.99.645 10.016 1.299l.497 1.138 1.017.215c.653.138 1.153.675 1.245 1.33l.089.649.906.664c.536.389.839 1.034.723 1.687l-.165.93.818.752c.399.365.415.998.04 1.382l-.577.597.213.838c.134.659-.295 1.279-.1007 1.338l-.496.059-.815.644c-.553.43-1.275.43-1.829 0l-.815-.644-.496-.059c-.754-.059-1.339-.679-1.007-1.338l.213-.838-.577-.597c-.375-.384-.359-1.017.04-1.382l.818-.752-.165-.93c-.116-.653.187-1.298.723-1.687l.906-.664.089-.649c.092-.655.592-1.192 1.245-1.33l1.017-.215.497-1.138C6.01.645 6.556.095 7.299.031A8.2 8.2 0 0 1 8 0ZM5.78 8.75a9.64 9.64 0 0 0 1.363 4.177c.255.426.542.832.857 1.215.245-.296.551-.705.857-1.215A9.64 9.64 0 0 0 10.22 8.75Zm4.44-1.5a9.64 9.64 0 0 0-1.363-4.177c-.307-.51-.612-.919-.857-1.215a9.927 9.927 0 0 0-.857 1.215A9.64 9.64 0 0 0 5.78 7.25Z">
+          </path>
+          }
+          @case ('action') {
+          <path
+            d="M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h12.5a.25.25 0 0 0 .25-.25V1.75a.25.25 0 0 0-.25-.25Zm7.47 3.97a.75.75 0 0 1 1.06 0l2 2a.75.75 0 0 1 0 1.06l-2 2a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L10.69 8.5H4.25a.75.75 0 0 1 0-1.5h6.44L9.22 5.53a.749.749 0 0 1 .215-.734.749.749 0 0 1 .785-.057Z">
+          </path>
+          }
+          @default {
+          <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"></path>
+          }
+          }
+        </svg>
 
-      <div class="config-item-content">
-        <a [href]="item.link" class="config-item-title" (click)="navigateToConfig($event, item.link)">
-          {{item.title}}
-        </a>
-        <div class="config-item-desc">{{item.description}}</div>
+        <div class="config-item-content">
+          <a [href]="item.link" class="config-item-title" (click)="navigateToConfig($event, item.link)">
+            {{item.title}}
+          </a>
+          <div class="config-item-desc">{{item.description}}</div>
+        </div>
       </div>
+      }
     </div>
     }
   </div>
-  }
+  <!-- } -->
 </aside>
