--- a/atkm/src/app/shared/components/content-main/content-main.component.html
+++ b/atkm/src/app/shared/components/content-main/content-main.component.html
@@ -1,4 +1,4 @@
-<main class="main-content">
+<main class="main-content" [class.config-collapsed]="configPanelCollapsed">
   <div class="content-wrapper">
     <div class="main-header">
       <h1>Home</h1>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="feed-items">
-          @for (item of feed.items; track item.id) {
+          @for (item of feed.items; track $index) {
 
           <div class="feed-item">
             <div class="feed-item-header">
