--- a/atkm/src/app/shared/components/sidebar-nav/sidebar-nav.component.html
+++ b/atkm/src/app/shared/components/sidebar-nav/sidebar-nav.component.html
@@ -22,8 +22,8 @@
     @if (section?.items && section.items.length > 0) {
     <ul class="repo-list">
       @for (item of section.items; track $index) {
-      <li>
-        <a [href]="item?.link || '#'" (click)="navigateToRepo($event, item?.link || '#')">
+      <li class="repo-item">
+        <a class="repo-title" [href]="item?.link || '#'" (click)="navigateToRepo($event, item?.link || '#')">
           <svg class="repo-icon" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16">
             <path
               d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 1 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5Zm10.5-1h-8a1 1 0 0 0-1 1v6.708A2.486 2.486 0 0 1 4.5 9h8ZM5 12.25a.25.25 0 0 1 .25-.25h3.5a.25.25 0 0 1 .25.25v3.25a.25.25 0 0 1-.4.2l-1.45-1.087a.249.249 0 0 0-.3 0L5.4 15.7a.25.25 0 0 1-.4-.2Z">
@@ -31,6 +31,11 @@
           </svg>
           {{ item?.label || '' }}
         </a>
+        @if (item?.action && item.action !== false) {
+        <button class="btn-action repo-action" (click)="handleAction(item.action.action)">
+          {{ item.action?.label }}
+        </button>
+        }
       </li>
       }
     </ul>
@@ -40,11 +45,7 @@
     </p>
     }
 
-    @if (section?.action) {
-    <button class="btn-action" (click)="handleAction(section.action.action)">
-      {{ section.action?.label }}
-    </button>
-    }
+
   </div>
   }
 
